--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,3 +1,8 @@
+
+// ====== Externals Libs ==================================================== //
+
+@import 'material-kit/assets/scss/material-kit.scss';
+
 // ====== General =========================================================== //
 
 .offset-left-2 {
