--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -13,6 +13,11 @@
 	margin-top: 0;
 }
 
+.title-logo {
+	height: 35px;
+	margin-right: 10px;
+}
+
 .title-list {
 	margin-top: 20px;
 	font-weight: 700;
